// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoodView when the user has registered should render the email as user 1`] = `
<HoodViewer
  canEdit={false}
  canUserVote={false}
  currentUserId="123"
  edit={[Function]}
  handleDownvote={[Function]}
  handleUnvote={[Function]}
  handleUpvote={[Function]}
  hood={
    Object {
      "city": "Ann Arbor",
      "county": "Washtenaw",
      "createdAt": "2018-01-01T00:00:00Z",
      "id": "321",
      "name": "Da Hood",
      "state": "Michigan",
      "updatedAt": "2018-01-01T00:00:00Z",
      "userId": "123",
      "votes": 0,
    }
  }
  hoodId="321"
  user={
    Object {
      "email": "eric@cool.com",
      "id": "123",
      "isTmp": false,
    }
  }
  userVoteType="unknown"
  userVoted={false}
  votes={0}
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-ckVGcZ",
            "isStatic": true,
            "lastClassName": "lfahBz",
            "rules": Array [
              "
  width: 90%;
  margin-top: 0.5rem;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-ckVGcZ",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="lfahBz"
      >
        <styled.div>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-dxgOiQ",
                  "isStatic": true,
                  "lastClassName": "jTjskY",
                  "rules": Array [
                    "
  font-size: ",
                    "1rem",
                    ";
  color: ",
                    "#fff",
                    ";
  display: flex;
  align-items: center;
  margin-bottom: 0.6rem;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-dxgOiQ",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="jTjskY"
            >
              <styled.h1>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": true,
                        "lastClassName": "gxzuMa",
                        "rules": Array [
                          "
  font-size: ",
                          "1.3rem",
                          ";
",
                        ],
                      },
                      "displayName": "styled.h1",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "h1",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <h1
                    className="gxzuMa"
                  >
                    Hood Viewer
                  </h1>
                </StyledComponent>
              </styled.h1>
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-kAzzGY",
                        "isStatic": true,
                        "lastClassName": "cDFycH",
                        "rules": Array [
                          "
  display: flex;
  justify-content: space-between;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-kAzzGY",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="cDFycH"
                  />
                </StyledComponent>
              </styled.div>
            </div>
          </StyledComponent>
        </styled.div>
        <Styled(styled.div)>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": true,
                  "lastClassName": "gTdQYw",
                  "rules": Array [
                    "
  background-color: ",
                    "#fff",
                    ";
  border-radius: 0.3rem;
  padding: 0.6rem;
",
                    "
  display: flex;
",
                  ],
                },
                "displayName": "Styled(styled.div)",
                "foldedComponentIds": Array [
                  "sc-iwsKbI",
                ],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="gTdQYw"
            >
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-fjdhpX",
                        "isStatic": true,
                        "lastClassName": "jOrice",
                        "rules": Array [
                          "
  padding: 0 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-fjdhpX",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="jOrice"
                  >
                    <styled.h1>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bdVaJa",
                              "isStatic": true,
                              "lastClassName": "gxzuMa",
                              "rules": Array [
                                "
  font-size: ",
                                "1.3rem",
                                ";
",
                              ],
                            },
                            "displayName": "styled.h1",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bdVaJa",
                            "target": "h1",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <h1
                          className="gxzuMa"
                        >
                          0
                        </h1>
                      </StyledComponent>
                    </styled.h1>
                  </div>
                </StyledComponent>
              </styled.div>
              <div
                style={
                  Object {
                    "width": "85%",
                  }
                }
              >
                <styled.h2>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bwzfXH",
                          "isStatic": true,
                          "lastClassName": "JiXRr",
                          "rules": Array [
                            "
  font-size: ",
                            "1.2rem",
                            ";
  margin-bottom: 0.5rem;
",
                          ],
                        },
                        "displayName": "styled.h2",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bwzfXH",
                        "target": "h2",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <h2
                      className="JiXRr"
                    >
                      Da Hood
                    </h2>
                  </StyledComponent>
                </styled.h2>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        User
                      </div>
                      <div>
                        eric@cool.com
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        Last Updated
                      </div>
                      <div>
                        12/31/2017 07:00 pm
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        Created
                      </div>
                      <div>
                        12/31/2017 07:00 pm
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <HoodReport
                  hood={
                    Object {
                      "city": "Ann Arbor",
                      "county": "Washtenaw",
                      "createdAt": "2018-01-01T00:00:00Z",
                      "id": "321",
                      "name": "Da Hood",
                      "state": "Michigan",
                      "updatedAt": "2018-01-01T00:00:00Z",
                      "userId": "123",
                      "votes": 0,
                    }
                  }
                >
                  <styled.div>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bZQynM",
                            "isStatic": true,
                            "lastClassName": "dgcADw",
                            "rules": Array [
                              "
  font-size: ",
                              "0.8rem",
                              ";
  display: flex;
  justify-content: space-between;
",
                            ],
                          },
                          "displayName": "styled.div",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bZQynM",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <div
                        className="dgcADw"
                      >
                        <Styled(styled.a)
                          href="api.youhood.io/report/321"
                          onClick={[Function]}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bxivhb",
                                  "isStatic": true,
                                  "lastClassName": "famlZw",
                                  "rules": Array [
                                    "
  margin: 0 0.2rem;
  color: ",
                                    "#fff",
                                    ";
",
                                    "
  color: ",
                                    "rgb(244,154,194)",
                                    ";
",
                                  ],
                                },
                                "displayName": "Styled(styled.a)",
                                "foldedComponentIds": Array [
                                  "sc-htpNat",
                                ],
                                "render": [Function],
                                "styledComponentId": "sc-bxivhb",
                                "target": "a",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            href="api.youhood.io/report/321"
                            onClick={[Function]}
                          >
                            <a
                              className="famlZw"
                              href="api.youhood.io/report/321"
                              onClick={[Function]}
                            >
                              Report
                            </a>
                          </StyledComponent>
                        </Styled(styled.a)>
                      </div>
                    </StyledComponent>
                  </styled.div>
                </HoodReport>
              </div>
            </div>
          </StyledComponent>
        </Styled(styled.div)>
      </div>
    </StyledComponent>
  </styled.div>
</HoodViewer>
`;

exports[`HoodView when the user is temporary should render \`Anonymous\` user name 1`] = `
<HoodViewer
  canEdit={false}
  canUserVote={false}
  currentUserId="123"
  edit={[Function]}
  handleDownvote={[Function]}
  handleUnvote={[Function]}
  handleUpvote={[Function]}
  hood={
    Object {
      "city": "Ann Arbor",
      "county": "Washtenaw",
      "createdAt": "2018-01-01T00:00:00Z",
      "id": "321",
      "name": "Da Hood",
      "state": "Michigan",
      "updatedAt": "2018-01-01T00:00:00Z",
      "userId": "123",
      "votes": 0,
    }
  }
  hoodId="321"
  user={
    Object {
      "email": "123",
      "id": "123",
      "isTmp": true,
    }
  }
  userVoteType="unknown"
  userVoted={false}
  votes={0}
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-ckVGcZ",
            "isStatic": true,
            "lastClassName": "lfahBz",
            "rules": Array [
              "
  width: 90%;
  margin-top: 0.5rem;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-ckVGcZ",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="lfahBz"
      >
        <styled.div>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-dxgOiQ",
                  "isStatic": true,
                  "lastClassName": "jTjskY",
                  "rules": Array [
                    "
  font-size: ",
                    "1rem",
                    ";
  color: ",
                    "#fff",
                    ";
  display: flex;
  align-items: center;
  margin-bottom: 0.6rem;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-dxgOiQ",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="jTjskY"
            >
              <styled.h1>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": true,
                        "lastClassName": "gxzuMa",
                        "rules": Array [
                          "
  font-size: ",
                          "1.3rem",
                          ";
",
                        ],
                      },
                      "displayName": "styled.h1",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "h1",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <h1
                    className="gxzuMa"
                  >
                    Hood Viewer
                  </h1>
                </StyledComponent>
              </styled.h1>
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-kAzzGY",
                        "isStatic": true,
                        "lastClassName": "cDFycH",
                        "rules": Array [
                          "
  display: flex;
  justify-content: space-between;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-kAzzGY",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="cDFycH"
                  />
                </StyledComponent>
              </styled.div>
            </div>
          </StyledComponent>
        </styled.div>
        <Styled(styled.div)>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": true,
                  "lastClassName": "gTdQYw",
                  "rules": Array [
                    "
  background-color: ",
                    "#fff",
                    ";
  border-radius: 0.3rem;
  padding: 0.6rem;
",
                    "
  display: flex;
",
                  ],
                },
                "displayName": "Styled(styled.div)",
                "foldedComponentIds": Array [
                  "sc-iwsKbI",
                ],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="gTdQYw"
            >
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-fjdhpX",
                        "isStatic": true,
                        "lastClassName": "jOrice",
                        "rules": Array [
                          "
  padding: 0 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-fjdhpX",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="jOrice"
                  >
                    <styled.h1>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bdVaJa",
                              "isStatic": true,
                              "lastClassName": "gxzuMa",
                              "rules": Array [
                                "
  font-size: ",
                                "1.3rem",
                                ";
",
                              ],
                            },
                            "displayName": "styled.h1",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bdVaJa",
                            "target": "h1",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <h1
                          className="gxzuMa"
                        >
                          0
                        </h1>
                      </StyledComponent>
                    </styled.h1>
                  </div>
                </StyledComponent>
              </styled.div>
              <div
                style={
                  Object {
                    "width": "85%",
                  }
                }
              >
                <styled.h2>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bwzfXH",
                          "isStatic": true,
                          "lastClassName": "JiXRr",
                          "rules": Array [
                            "
  font-size: ",
                            "1.2rem",
                            ";
  margin-bottom: 0.5rem;
",
                          ],
                        },
                        "displayName": "styled.h2",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bwzfXH",
                        "target": "h2",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <h2
                      className="JiXRr"
                    >
                      Da Hood
                    </h2>
                  </StyledComponent>
                </styled.h2>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        User
                      </div>
                      <div>
                        Anonymous
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        Last Updated
                      </div>
                      <div>
                        12/31/2017 07:00 pm
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        Created
                      </div>
                      <div>
                        12/31/2017 07:00 pm
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <HoodReport
                  hood={
                    Object {
                      "city": "Ann Arbor",
                      "county": "Washtenaw",
                      "createdAt": "2018-01-01T00:00:00Z",
                      "id": "321",
                      "name": "Da Hood",
                      "state": "Michigan",
                      "updatedAt": "2018-01-01T00:00:00Z",
                      "userId": "123",
                      "votes": 0,
                    }
                  }
                >
                  <styled.div>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bZQynM",
                            "isStatic": true,
                            "lastClassName": "dgcADw",
                            "rules": Array [
                              "
  font-size: ",
                              "0.8rem",
                              ";
  display: flex;
  justify-content: space-between;
",
                            ],
                          },
                          "displayName": "styled.div",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bZQynM",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <div
                        className="dgcADw"
                      >
                        <Styled(styled.a)
                          href="api.youhood.io/report/321"
                          onClick={[Function]}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bxivhb",
                                  "isStatic": true,
                                  "lastClassName": "famlZw",
                                  "rules": Array [
                                    "
  margin: 0 0.2rem;
  color: ",
                                    "#fff",
                                    ";
",
                                    "
  color: ",
                                    "rgb(244,154,194)",
                                    ";
",
                                  ],
                                },
                                "displayName": "Styled(styled.a)",
                                "foldedComponentIds": Array [
                                  "sc-htpNat",
                                ],
                                "render": [Function],
                                "styledComponentId": "sc-bxivhb",
                                "target": "a",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            href="api.youhood.io/report/321"
                            onClick={[Function]}
                          >
                            <a
                              className="famlZw"
                              href="api.youhood.io/report/321"
                              onClick={[Function]}
                            >
                              Report
                            </a>
                          </StyledComponent>
                        </Styled(styled.a)>
                      </div>
                    </StyledComponent>
                  </styled.div>
                </HoodReport>
              </div>
            </div>
          </StyledComponent>
        </Styled(styled.div)>
      </div>
    </StyledComponent>
  </styled.div>
</HoodViewer>
`;
